fix bug where bg card is visible before click

--- a/popup.css
+++ b/popup.css
@@ -57,6 +57,10 @@ body {
     display: none !important;
 }
 
+.show {
+    display: block !important;
+}
+
 .note-bullet {
     font-size: 0.75em;
 }
@@ -73,8 +77,8 @@ body {
     background-color: #f8f9fa !important;
     border-radius: 10px;
     padding: 20px;
-    /* padding-bottom: 0 !important; */
     margin: 20px;
+    /* display: none !important; */
 }
 
 ul {
